--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cypress": "^6.5.0",
     "express": "^4.17.1",
     "html-react-parser": "^1.2.4",
     "react": "^17.0.1",
